@@ -19,101 +19,141 @@ public class TerritoryManager {
     private static final Gson GSON = new GsonBuilder().setPrettyPrinting().create();
     private static final String SAVE_FILE = "creraces_territory.json";
 
-    private static TerritoryManager INSTANCE;
+    private static volatile TerritoryManager INSTANCE;
 
     public static TerritoryManager get() {
         if (INSTANCE == null) INSTANCE = new TerritoryManager();
         return INSTANCE;
     }
 
-    // ── Data ───────────────────────────────────────────────────────────────────
+    // Data
     private final Map<Long, ClaimData>             claims    = new HashMap<>();
     private final Map<ResourceLocation, ClanData>  diplomacy = new HashMap<>();
 
-    // Maps BlockPos.asLong() of a root block → chunk keys it anchored
-    private final Map<Long, Set<Long>> rootAnchors = new HashMap<>();
+    // Maps BlockPos.asLong() of a root block → chunks it anchored, split by whether they were new claims
+    private final Map<Long, RootAnchorData> rootAnchors = new HashMap<>();
+
+    private static final class RootAnchorData {
+        Set<Long> newClaims;
+        Set<Long> preExisting;
+        RootAnchorData(Set<Long> newClaims, Set<Long> preExisting) {
+            this.newClaims = newClaims;
+            this.preExisting = preExisting;
+        }
+    }
 
     // transient, not saved
     private final Map<UUID, Long> lastChunkKeys = new HashMap<>();
 
-    // ── ClaimResult ────────────────────────────────────────────────────────────
+    // ClaimResult
     public enum ClaimResultType {
-        SUCCESS, UNCLAIM_SUCCESS, PARTIAL, INVALID_BIOME, ENEMY_TERRITORY, INSIDE_OWN_TERRITORY, INSUFFICIENT_COINS, ANCHOR_CHUNK, OUT_OF_RANGE, NOT_LEADER
+        SUCCESS, UNCLAIM_SUCCESS, INVALID_BIOME, ENEMY_TERRITORY, INSIDE_OWN_TERRITORY, INSUFFICIENT_COINS, ANCHOR_CHUNK, OUT_OF_RANGE, NOT_LEADER, MAX_NODES_REACHED
     }
 
     public static final class ClaimResult {
         public final ClaimResultType type;
         public final int claimed;
         public final int alreadyOwned;
-        /** Chunk keys that were newly created by this operation — used to anchor only what the tree itself claimed. */
+        /** Chunk keys newly created by this operation. */
         public final Set<Long> newClaims;
+        /** Pre-existing own-race chunk keys in the radius that were not newly claimed. */
+        public final Set<Long> preExistingClaims;
 
-        private ClaimResult(ClaimResultType type, int claimed, int alreadyOwned, Set<Long> newClaims) {
+        private ClaimResult(ClaimResultType type, int claimed, int alreadyOwned, Set<Long> newClaims, Set<Long> preExistingClaims) {
             this.type = type;
             this.claimed = claimed;
             this.alreadyOwned = alreadyOwned;
             this.newClaims = newClaims;
+            this.preExistingClaims = preExistingClaims;
         }
 
-        public static ClaimResult success(int n, Set<Long> keys)   { return new ClaimResult(ClaimResultType.SUCCESS, n, 0, keys); }
-        public static ClaimResult partial(int ok, int skipped)     { return new ClaimResult(ClaimResultType.PARTIAL, ok, skipped, Collections.emptySet()); }
-        public static ClaimResult invalidBiome()                   { return new ClaimResult(ClaimResultType.INVALID_BIOME, 0, 0, Collections.emptySet()); }
-        public static ClaimResult enemyTerritory()                 { return new ClaimResult(ClaimResultType.ENEMY_TERRITORY, 0, 0, Collections.emptySet()); }
-        public static ClaimResult insideOwn()                      { return new ClaimResult(ClaimResultType.INSIDE_OWN_TERRITORY, 0, 0, Collections.emptySet()); }
-        public static ClaimResult insufficientCoins()              { return new ClaimResult(ClaimResultType.INSUFFICIENT_COINS, 0, 0, Collections.emptySet()); }
-        public static ClaimResult anchorChunk()                    { return new ClaimResult(ClaimResultType.ANCHOR_CHUNK, 0, 0, Collections.emptySet()); }
+        public static ClaimResult success(int n, Set<Long> keys, Set<Long> preExisting) { return new ClaimResult(ClaimResultType.SUCCESS, n, 0, keys, preExisting); }
+        public static ClaimResult insideOwn(Set<Long> preExisting)                      { return new ClaimResult(ClaimResultType.INSIDE_OWN_TERRITORY, 0, 0, Collections.emptySet(), preExisting); }
+        public static ClaimResult invalidBiome()                   { return new ClaimResult(ClaimResultType.INVALID_BIOME, 0, 0, Collections.emptySet(), Collections.emptySet()); }
+        public static ClaimResult enemyTerritory()                 { return new ClaimResult(ClaimResultType.ENEMY_TERRITORY, 0, 0, Collections.emptySet(), Collections.emptySet()); }
+        public static ClaimResult insufficientCoins()              { return new ClaimResult(ClaimResultType.INSUFFICIENT_COINS, 0, 0, Collections.emptySet(), Collections.emptySet()); }
+        public static ClaimResult anchorChunk()                    { return new ClaimResult(ClaimResultType.ANCHOR_CHUNK, 0, 0, Collections.emptySet(), Collections.emptySet()); }
+        public static ClaimResult maxNodesReached()                { return new ClaimResult(ClaimResultType.MAX_NODES_REACHED, 0, 0, Collections.emptySet(), Collections.emptySet()); }
     }
 
-    // ── Accessors ──────────────────────────────────────────────────────────────
+    // Accessors
     public Map<Long, ClaimData>            getClaims()    { return Collections.unmodifiableMap(claims); }
     public Map<ResourceLocation, ClanData> getDiplomacy() { return Collections.unmodifiableMap(diplomacy); }
     public ClaimData getClaimAt(long chunkKey)            { return claims.get(chunkKey); }
     public ClaimData getClaimAt(ChunkPos pos)             { return claims.get(pos.toLong()); }
 
-    // ── Claim Operations ───────────────────────────────────────────────────────
+    // Claim Operations
 
     /**
      * Claims a (2*radius+1)² island centered on the given chunk for raceId.
      * Only chunks that pass {@code include} are claimed; the rest are silently skipped.
-     * Proceeds even when the center chunk is already owned by this race — only newly-unclaimed
+     * Proceeds even when the center chunk is already owned by this race - only newly-unclaimed
      * chunks in the radius are added and returned in {@link ClaimResult#newClaims}.
      * Returns INSIDE_OWN_TERRITORY when the whole radius was already owned (nothing new claimed).
      * Returns ENEMY_TERRITORY if any included chunk belongs to another race.
+     * Both the enemy-chunk check and the overwrite-instead behavior depend on TERRITORY_INTER_RACE_BLOCKING.
      */
     public ClaimResult claimIsland(ResourceLocation raceId, ChunkPos center, UUID claimerUUID,
             java.util.function.Predicate<ChunkPos> include) {
+        // Enforce node (root block) limit per player
+        int maxNodes = CreRacesConfig.TERRITORY_MAX_NODES_PER_PLAYER.get();
+        if (maxNodes > 0) {
+            long playerNodeCount = rootAnchors.values().stream()
+                .filter(rad -> rad.newClaims.stream().anyMatch(k -> {
+                    ClaimData cd = claims.get(k);
+                    return cd != null && claimerUUID.equals(cd.getOwnerUUID());
+                }))
+                .count();
+            if (playerNodeCount >= maxNodes) return ClaimResult.maxNodesReached();
+        }
+
+        boolean interRaceBlocking = CreRacesConfig.TERRITORY_INTER_RACE_BLOCKING.get();
+
         long centerKey = center.toLong();
         ClaimData existingCenter = claims.get(centerKey);
-        if (existingCenter != null && !existingCenter.getRaceId().equals(raceId)) {
+        if (interRaceBlocking && existingCenter != null && !existingCenter.getRaceId().equals(raceId)) {
             return ClaimResult.enemyTerritory();
         }
 
         int radius = CreRacesConfig.TERRITORY_DEFAULT_CLAIM_RADIUS.get();
-        // First pass: ensure no enemy chunks anywhere in the radius
-        for (int dx = -radius; dx <= radius; dx++) {
-            for (int dz = -radius; dz <= radius; dz++) {
-                ChunkPos cp = new ChunkPos(center.x + dx, center.z + dz);
-                if (!include.test(cp)) continue;
-                ClaimData cd = claims.get(cp.toLong());
-                if (cd != null && !cd.getRaceId().equals(raceId)) return ClaimResult.enemyTerritory();
+        // First pass: ensure no enemy chunks anywhere in the radius (only when blocking is on)
+        if (interRaceBlocking) {
+            for (int dx = -radius; dx <= radius; dx++) {
+                for (int dz = -radius; dz <= radius; dz++) {
+                    ChunkPos cp = new ChunkPos(center.x + dx, center.z + dz);
+                    if (!include.test(cp)) continue;
+                    ClaimData cd = claims.get(cp.toLong());
+                    if (cd != null && !cd.getRaceId().equals(raceId)) return ClaimResult.enemyTerritory();
+                }
             }
         }
 
-        // Second pass: claim only the unclaimed chunks and track which are new
+        // Second pass: claim unclaimed chunks (and enemy chunks when blocking is off)
         Set<Long> newKeys = new HashSet<>();
+        Set<Long> preExistingKeys = new HashSet<>();
         for (int dx = -radius; dx <= radius; dx++) {
             for (int dz = -radius; dz <= radius; dz++) {
                 ChunkPos cp = new ChunkPos(center.x + dx, center.z + dz);
                 if (!include.test(cp)) continue;
                 long key = cp.toLong();
-                if (claims.containsKey(key)) continue;
+                ClaimData existing = claims.get(key);
+                if (existing != null) {
+                    if (existing.getRaceId().equals(raceId)) {
+                        preExistingKeys.add(key);
+                    } else if (!interRaceBlocking) {
+                        // Overwrite enemy chunk when inter-race blocking is disabled
+                        claims.put(key, new ClaimData(key, raceId, false, claimerUUID));
+                        newKeys.add(key);
+                    }
+                    continue;
+                }
                 claims.put(key, new ClaimData(key, raceId, false, claimerUUID));
                 newKeys.add(key);
             }
         }
 
-        if (newKeys.isEmpty()) return ClaimResult.insideOwn();
-        return ClaimResult.success(newKeys.size(), newKeys);
+        if (newKeys.isEmpty()) return ClaimResult.insideOwn(preExistingKeys);
+        return ClaimResult.success(newKeys.size(), newKeys, preExistingKeys);
     }
 
     /** Convenience overload: claims all chunks in the island with no biome filter. */
@@ -122,15 +162,21 @@ public class TerritoryManager {
     }
 
     /** Claims exactly one chunk for raceId; used by the territory map (no island expansion). */
-    public ClaimResult claimChunk(ResourceLocation raceId, ChunkPos chunk, UUID claimerUUID) {
+    public ClaimResult claimChunk(ResourceLocation raceId, ChunkPos chunk, UUID claimerUUID, int pricePaid) {
         long key = chunk.toLong();
         ClaimData existing = claims.get(key);
         if (existing != null) {
-            if (existing.getRaceId().equals(raceId)) return ClaimResult.insideOwn();
+            if (existing.getRaceId().equals(raceId)) return ClaimResult.insideOwn(Set.of(key));
             return ClaimResult.enemyTerritory();
         }
-        claims.put(key, new ClaimData(key, raceId, false, claimerUUID));
-        return ClaimResult.success(1, Set.of(key));
+        claims.put(key, new ClaimData(key, raceId, false, claimerUUID, pricePaid));
+        return ClaimResult.success(1, Set.of(key), Collections.emptySet());
+    }
+
+    /** @deprecated Use {@link #claimChunk(ResourceLocation, ChunkPos, UUID, int)} with explicit price. */
+    @Deprecated
+    public ClaimResult claimChunk(ResourceLocation raceId, ChunkPos chunk, UUID claimerUUID) {
+        return claimChunk(raceId, chunk, claimerUUID, 0);
     }
 
     public boolean unclaimChunk(ResourceLocation raceId, ChunkPos chunk) {
@@ -138,6 +184,16 @@ public class TerritoryManager {
         ClaimData cd = claims.get(key);
         if (cd == null || !cd.getRaceId().equals(raceId)) return false;
         if (cd.isPersistent()) return false;
+        claims.remove(key);
+        return true;
+    }
+
+    /** Removes a chunk only if the given player is its owner, regardless of persistence. */
+    public boolean unclaimOwnChunk(java.util.UUID callerUUID, ChunkPos chunk) {
+        long key = chunk.toLong();
+        ClaimData cd = claims.get(key);
+        if (cd == null) return false;
+        if (!callerUUID.equals(cd.getOwnerUUID())) return false;
         claims.remove(key);
         return true;
     }
@@ -152,33 +208,47 @@ public class TerritoryManager {
         long key = pos.toLong();
         ClaimData cd = claims.get(key);
         if (cd == null) return;
-        claims.put(key, new ClaimData(key, cd.getRaceId(), persistent, cd.getOwnerUUID()));
+        claims.put(key, new ClaimData(key, cd.getRaceId(), persistent, cd.getOwnerUUID(), cd.getPricePaid()));
     }
 
     /**
-     * Called when a root block is placed. Marks all provided chunk keys as persistent
-     * and records which chunks this root block owns so they can be unclaimed precisely on removal.
+     * Called when a root block is placed. Marks all provided chunk keys as persistent and records
+     * new vs. pre-existing chunks so removal can handle them differently.
      */
-    public void placeRootBlock(net.minecraft.core.BlockPos rootPos, Set<Long> islandChunkKeys) {
-        Set<Long> anchored = new HashSet<>();
-        for (long key : islandChunkKeys) {
+    public void placeRootBlock(net.minecraft.core.BlockPos rootPos, Set<Long> newClaims, Set<Long> preExisting) {
+        Set<Long> anchoredNew = new HashSet<>();
+        for (long key : newClaims) {
             ClaimData cd = claims.get(key);
             if (cd != null) {
-                claims.put(key, new ClaimData(key, cd.getRaceId(), true, cd.getOwnerUUID()));
-                anchored.add(key);
+                claims.put(key, new ClaimData(key, cd.getRaceId(), true, cd.getOwnerUUID(), cd.getPricePaid()));
+                anchoredNew.add(key);
             }
         }
-        if (!anchored.isEmpty()) rootAnchors.put(rootPos.asLong(), anchored);
+        Set<Long> anchoredPre = new HashSet<>();
+        for (long key : preExisting) {
+            ClaimData cd = claims.get(key);
+            if (cd != null) {
+                claims.put(key, new ClaimData(key, cd.getRaceId(), true, cd.getOwnerUUID(), cd.getPricePaid()));
+                anchoredPre.add(key);
+            }
+        }
+        if (!anchoredNew.isEmpty() || !anchoredPre.isEmpty()) {
+            rootAnchors.put(rootPos.asLong(), new RootAnchorData(anchoredNew, anchoredPre));
+        }
     }
 
     /**
-     * Called when a root block is removed. Fully unclaims only the chunks this root block
-     * originally anchored, leaving any overlapping territory from other trees intact.
+     * Called when a root block is removed. Fully unclaims chunks it created; only un-persists
+     * pre-existing chunks so they remain claimed but can again be voluntarily unclaimed.
      */
     public void removeRootBlock(net.minecraft.core.BlockPos rootPos) {
-        Set<Long> anchored = rootAnchors.remove(rootPos.asLong());
-        if (anchored == null) return;
-        anchored.forEach(claims::remove);
+        RootAnchorData data = rootAnchors.remove(rootPos.asLong());
+        if (data == null) return;
+        data.newClaims.forEach(claims::remove);
+        for (long key : data.preExisting) {
+            ClaimData cd = claims.get(key);
+            if (cd != null) claims.put(key, new ClaimData(key, cd.getRaceId(), false, cd.getOwnerUUID(), cd.getPricePaid()));
+        }
     }
 
     /** Admin: remove all claims for a race. */
@@ -198,12 +268,14 @@ public class TerritoryManager {
         });
         if (removed.isEmpty()) return;
         rootAnchors.entrySet().removeIf(e -> {
-            e.getValue().removeAll(removed);
-            return e.getValue().isEmpty();
+            RootAnchorData d = e.getValue();
+            d.newClaims.removeAll(removed);
+            d.preExisting.removeAll(removed);
+            return d.newClaims.isEmpty() && d.preExisting.isEmpty();
         });
     }
 
-    // ── Diplomacy ──────────────────────────────────────────────────────────────
+    // Diplomacy
 
     public ClanData getOrCreateClan(ResourceLocation raceId) {
         return diplomacy.computeIfAbsent(raceId, ClanData::new);
@@ -221,12 +293,12 @@ public class TerritoryManager {
     }
 
     public void setDiplomacy(ResourceLocation raceA, ResourceLocation raceB, DiplomacyStatus status) {
-        getOrCreateClan(raceA).setRelation(raceB, status);
-        ClanData clan = diplomacy.get(raceA);
+        ClanData clan = getOrCreateClan(raceA);
+        clan.setRelation(raceB, status);
         if (clan.getRelations().isEmpty()) diplomacy.remove(raceA);
     }
 
-    // ── Tick / Notifications ───────────────────────────────────────────────────
+    // Tick / Notifications
 
     public void tick(MinecraftServer server) {
         tickTerritoryNotifications(server);
@@ -272,7 +344,8 @@ public class TerritoryManager {
                 msg = net.minecraft.network.chat.Component.translatable("msg.creraces.territory.left", raceName(oldRace));
             }
 
-            if (msg != null) player.displayClientMessage(msg, true);
+            if (msg != null && mc.sayda.creraces.config.CreRacesConfig.TERRITORY_ENTRY_MESSAGES.get())
+                player.displayClientMessage(msg, true);
         }
     }
 
@@ -281,7 +354,7 @@ public class TerritoryManager {
         return race != null ? race.name().getString() : raceId.getPath();
     }
 
-    // ── Persistence ────────────────────────────────────────────────────────────
+    // Persistence
 
     public static void save(MinecraftServer server) {
         Path path = server.getWorldPath(Objects.requireNonNull(LevelResource.ROOT)).resolve(SAVE_FILE);
@@ -301,10 +374,16 @@ public class TerritoryManager {
         root.add("diplomacy", diplomacyJson);
 
         JsonObject anchorsJson = new JsonObject();
-        for (Map.Entry<Long, Set<Long>> e : tm.rootAnchors.entrySet()) {
-            JsonArray arr = new JsonArray();
-            for (long k : e.getValue()) arr.add(k);
-            anchorsJson.add(String.valueOf(e.getKey()), arr);
+        for (Map.Entry<Long, RootAnchorData> e : tm.rootAnchors.entrySet()) {
+            RootAnchorData rad = e.getValue();
+            JsonObject radObj = new JsonObject();
+            JsonArray newArr = new JsonArray();
+            for (long k : rad.newClaims) newArr.add(k);
+            radObj.add("new", newArr);
+            JsonArray preArr = new JsonArray();
+            for (long k : rad.preExisting) preArr.add(k);
+            radObj.add("pre", preArr);
+            anchorsJson.add(String.valueOf(e.getKey()), radObj);
         }
         root.add("rootAnchors", anchorsJson);
 
@@ -350,9 +429,19 @@ public class TerritoryManager {
                 for (Map.Entry<String, JsonElement> e : root.getAsJsonObject("rootAnchors").entrySet()) {
                     try {
                         long rootKey = Long.parseLong(e.getKey());
-                        Set<Long> chunks = new HashSet<>();
-                        for (JsonElement c : e.getValue().getAsJsonArray()) chunks.add(c.getAsLong());
-                        fresh.rootAnchors.put(rootKey, chunks);
+                        Set<Long> newChunks = new HashSet<>();
+                        Set<Long> preChunks = new HashSet<>();
+                        JsonElement val = e.getValue();
+                        if (val.isJsonObject()) {
+                            // Current format: {"new": [...], "pre": [...]}
+                            JsonObject radObj = val.getAsJsonObject();
+                            if (radObj.has("new")) for (JsonElement c : radObj.getAsJsonArray("new")) newChunks.add(c.getAsLong());
+                            if (radObj.has("pre")) for (JsonElement c : radObj.getAsJsonArray("pre")) preChunks.add(c.getAsLong());
+                        } else {
+                            // Legacy flat array - treat all as new claims
+                            for (JsonElement c : val.getAsJsonArray()) newChunks.add(c.getAsLong());
+                        }
+                        fresh.rootAnchors.put(rootKey, new RootAnchorData(newChunks, preChunks));
                     } catch (Exception ex) {
                         CreRaces.LOGGER.warn("Skipping malformed rootAnchor entry '{}': {}", e.getKey(), ex.getMessage());
                     }
@@ -368,13 +457,14 @@ public class TerritoryManager {
         }
     }
 
-    // ── Serialization helpers ──────────────────────────────────────────────────
+    // Serialization helpers
 
     private static JsonObject serializeClaim(ClaimData c) {
         JsonObject o = new JsonObject();
         o.addProperty("race", c.getRaceId().toString());
         o.addProperty("persistent", c.isPersistent());
         if (c.getOwnerUUID() != null) o.addProperty("owner", c.getOwnerUUID().toString());
+        if (c.getPricePaid() > 0) o.addProperty("price", c.getPricePaid());
         return o;
     }
 
@@ -382,7 +472,8 @@ public class TerritoryManager {
         ResourceLocation race = new ResourceLocation(o.get("race").getAsString());
         boolean persistent = o.has("persistent") && o.get("persistent").getAsBoolean();
         UUID owner = o.has("owner") ? UUID.fromString(o.get("owner").getAsString()) : null;
-        return new ClaimData(key, race, persistent, owner);
+        int price = o.has("price") ? o.get("price").getAsInt() : 0;
+        return new ClaimData(key, race, persistent, owner, price);
     }
 
     private static JsonObject serializeClan(ClanData c) {
